syntax = "proto3";

option go_package = "pb";

import "common.proto";
import "entity_admin_user.proto";

package api;

service AdminUserService {
    rpc GetMe (common.Empty) returns (entity.AdminUser);
    rpc GetAll (common.Empty) returns (entity.AdminUserList);
    rpc Create (entity.CreateAdminUserRequest) returns (entity.AdminUser);
    rpc Update (entity.UpdateAdminUserRequest) returns (entity.AdminUser);
    rpc Delete (entity.AdminUserID) returns (common.Empty);
}